# sushitech_agent

./: README.md  main.bat  pyproject.toml
STSAgent/Assets/Scenes/: SampleScene.unity
STSAgent/Assets/Scripts/: ImageSwitcher.cs  RecordingButton.cs
UnityAgent/Assets/Scenes/: SampleScene.unity
UnityAgent/Assets/Scripts/: GlobalVariables.cs  QuQu.cs  WavUtility.cs  WebSocketClient.cs
backend/: realtime_api.md  sample.py
backend/.clinerules/: japanese-style-collaboration.md
backend/memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
backend/src/: __init__.py  agent.py  api.py  prompt.py
backend/test/: test.py
backend/text_data/: setting_星霧月音.txt  setting_雲霧星奈.txt
src/backend/: game_api.py  game_master.py  game_structures.py
